--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1",
     "vue": "^3.2.38"
   },
   "devDependencies": {
